--- a/config.env
+++ b/config.env
@@ -5,3 +5,4 @@ NODE_ENV=development
 #zainab-graduation-db
 EMAIL_USER:progahmedelsayed@gmail.com
 DB_URI=mongodb+srv://zainab:w.%21hgE9Waqq_%40H%40@cluster0.xfhmw4e.mongodb.net/graduation-db?retryWrites=true&w=majority
+JWT_SECRET_KEY=my-32-character-ultra-secure-and-ultra-long-secret
